--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "Xccel",
+  "name": "Accelerate",
   "version": "1.0",
-  "description": "A Chrome extension built during Hackville 2025 for students.",
+  "description": "A Chrome extension built during Dreamwell 2025 for students.",
   "permissions": [
     "activeTab",
     "storage",
@@ -14,16 +14,16 @@
     "<all_urls>"
   ],
   "icons": {
-    "16": "icons/icon16.png",
-    "48": "icons/icon48.png",
-    "128": "icons/icon128.png"
+    "16": "assets/speedometer-logo.svg",
+    "48": "assets/speedometer-logo.svg",
+    "128": "assets/speedometer-logo.svg"
   },
   "action": {
     "default_popup": "index.html",
     "default_icon": {
-      "16": "icons/icon16.png",
-      "48": "icons/icon48.png",
-      "128": "icons/icon128.png"
+      "16": "assets/speedometer-logo.svg",
+      "48": "assets/speedometer-logo.svg",
+      "128": "assets/speedometer-logo.svg"
     }
   },
   "background": {
